# A-Maze-Ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  parser.py  pyproject.toml  test.py  visualisor.py
.github/workflows/: ci.yml
lib/: mlx-2.2-py3-fedora-any.whl  mlx-2.2-py3-none-any.whl
mazegen/: __init__.py  generator.py  solver.py  utils.py
mazegen/algo/: algo_factory.py  astar.py  backtracking.py  binary_tree.py  utils.py
mlx/: __init__.py  mlx.py
mlx/docs/: mlx.3  mlx.h  mlx_extra.3  mlx_loop.3  mlx_new_image.3  mlx_new_window.3  mlx_pixel_put.3
src/: parser.py  utils.py  visualisor.py
tests/: output_validator.py  test_generator.py  test_package.py  test_parser.py
