[project]
name = "mazegen"
version = "1.0.0"
description = "maze generator and maze solver for 42 project A_Maze_ing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "mazegen"
